--- a/index.css
+++ b/index.css
@@ -12,3 +12,55 @@ body{
 .heading{
     font-family: 'Lobster', cursive;
 }
+#title{
+    font-size: 90px;
+    text-align: center;
+}
+#span1{
+    color: red;
+}
+#img-div{
+    /* border: 2px solid red; */
+    text-align: center;
+}
+#image{
+    width: 400px;
+    border-radius: 40px;
+    box-shadow: 5px 5px 50px red;
+}
+
+#info{
+    /* border: 2px solid red; */
+    width: 80%;
+    margin: 20px auto;
+    text-align: justify;
+    font-size: 1.5rem;
+
+}
+
+#marvel{
+    /* border: 2px solid red; */
+    color: red;
+    width: 80%;
+    margin: auto;
+    /*margin-left: 10%; üstteki yöntemin ikinci yöntemi*/
+}
+
+ul{
+    width: 80%;
+    margin: auto;
+
+}
+
+li{
+    font-size: 24px;
+    line-height: 3rem ;
+}
+
+#footer{
+    /* border: 2px solid red; */
+    margin: 2rem;
+    padding: 2rem;
+    text-align: center;
+    font-size: 2rem;
+}
