--- a/index.css
+++ b/index.css
@@ -64,3 +64,15 @@ li{
     text-align: center;
     font-size: 2rem;
 }
+#link{
+    text-decoration: none;
+    color: white;
+    border: 2px solid darkorange;
+    padding: 1rem;
+    border-radius: 10px;
+    background-color: black;
+}
+#link:hover{
+    background-color: gray;
+    color: black;
+}
